<resources>
    <string name="app_name">QuizAppAssignment</string>
    <string name="q_1">Which of the following is a primary component of a computer\'s Central Processing Unit (CPU)?</string>
    <string name="q_1_option_a">Hard Drive</string>
    <string name="q_1_option_b">Graphics Card</string>
    <string name="q_1_option_c">Control Unit</string>
    <string name="q_1_option_d">Network Interface Card</string>

    <string name="q_2">What is the time complexity of a binary search algorithm?</string>
    <string name="q_2_option_a">O(n)</string>
    <string name="q_2_option_b">O(log n)</string>
    <string name="q_2_option_c">O(n log n)</string>
    <string name="q_2_option_d">O(n^2)</string>

    <string name="q_3">In object-oriented programming, what does "inheritance" refer to?</string>
    <string name="q_3_option_a">Copying code from one class to another</string>
    <string name="q_3_option_b">Sharing methods between unrelated classes</string>
    <string name="q_3_option_c">Deriving a new class from an existing one</string>
    <string name="q_3_option_d">None of the above</string>

    <string name="q_4">Which protocol is used to send emails?</string>
    <string name="q_4_option_a">FTP</string>
    <string name="q_4_option_b">HTTP</string>
    <string name="q_4_option_c">SMTP</string>
    <string name="q_4_option_d">TCP</string>

    <string name="q_5">What is the primary purpose of an operating system?</string>
    <string name="q_5_option_a">To perform arithmetic operations</string>
    <string name="q_5_option_b">To manage hardware and software resources</string>
    <string name="q_5_option_c">To connect to the internet</string>
    <string name="q_5_option_d">To develop software applications</string>

    <string name="q_6">Which data structure uses the Last-In-First-Out (LIFO) method?</string>
    <string name="q_6_option_a">Queue</string>
    <string name="q_6_option_b">Array</string>
    <string name="q_6_option_c">Stack</string>
    <string name="q_6_option_d">Linked List</string>

    <string name="q_7">What is the function of the "git commit" command in Git?</string>
    <string name="q_7_option_a">Upload changes to the remote repository</string>
    <string name="q_7_option_b">Save changes to the local repository</string>
    <string name="q_7_option_c">Merge changes from another branch</string>
    <string name="q_7_option_d">Create a new branch</string>

    <string name="q_8">What does SQL stand for?</string>
    <string name="q_8_option_a">Simple Query Language</string>
    <string name="q_8_option_b">Structured Query Language</string>
    <string name="q_8_option_c">Standard Query Language</string>
    <string name="q_8_option_d">Systematic Query Language</string>

    <string name="q_9">Which of the following is NOT a programming paradigm?</string>
    <string name="q_9_option_a">Object-oriented programming</string>
    <string name="q_9_option_b">Functional programming</string>
    <string name="q_9_option_c">Declarative programming</string>
    <string name="q_9_option_d">Relational programming</string>

    <string name="q_10">What is an IP address?</string>
    <string name="q_10_option_a">A hardware address for a network card</string>
    <string name="q_10_option_b">A unique string identifier for a computer on a network</string>
    <string name="q_10_option_c">A network protocol</string>
    <string name="q_10_option_d">A wireless transmission standard</string>

    <string name="q_11">Which of the following sorting algorithms has the worst-case time complexity of O(n^2)?</string>
    <string name="q_11_option_a">Merge Sort</string>
    <string name="q_11_option_b">Quick Sort</string>
    <string name="q_11_option_c">Bubble Sort</string>
    <string name="q_11_option_d">Heap Sort</string>

    <string name="q_12">What does the acronym HTTP stand for?</string>
    <string name="q_12_option_a">HyperText Transfer Protocol</string>
    <string name="q_12_option_b">Hyperlink Text Transfer Protocol</string>
    <string name="q_12_option_c">High Transfer Text Protocol</string>
    <string name="q_12_option_d">HyperTransfer Text Protocol</string>

    <string name="q_13">Which of the following is an example of a compiled programming language?</string>
    <string name="q_13_option_a">Python</string>
    <string name="q_13_option_b">JavaScript</string>
    <string name="q_13_option_c">Java</string>
    <string name="q_13_option_d">HTML</string>

    <string name="q_14">Which layer of the OSI model is responsible for routing packets across a network?</string>
    <string name="q_14_option_a">Physical Layer</string>
    <string name="q_14_option_b">Data Link Layer</string>
    <string name="q_14_option_c">Network Layer</string>
    <string name="q_14_option_d">Transport Layer</string>

    <string name="q_15">Which type of database stores data in tables with rows and columns?</string>
    <string name="q_15_option_a">Graph Database</string>
    <string name="q_15_option_b">Document Database</string>
    <string name="q_15_option_c">Relational Database</string>
    <string name="q_15_option_d">Key-Value Store</string>

    <string name="q_16">What is the output of the boolean expression (true AND false) OR true?</string>
    <string name="q_16_option_a">true</string>
    <string name="q_16_option_b">false</string>
    <string name="q_16_option_c">null</string>
    <string name="q_16_option_d">undefined</string>

    <string name="q_17">Which sorting algorithm is considered the fastest on average for large datasets?</string>
    <string name="q_17_option_a">Merge Sort</string>
    <string name="q_17_option_b">Quick Sort</string>
    <string name="q_17_option_c">Selection Sort</string>
    <string name="q_17_option_d">Insertion Sort</string>

    <string name="q_18">What is the purpose of the Java Virtual Machine (JVM)?</string>
    <string name="q_18_option_a">To compile Java code to machine code</string>
    <string name="q_18_option_b">To interpret Java bytecode</string>
    <string name="q_18_option_c">To store data in memory</string>
    <string name="q_18_option_d">To manage network connections</string>

    <string name="q_19">Which data structure is most efficient for searching and insertion operations?</string>
    <string name="q_19_option_a">Array</string>
    <string name="q_19_option_b">Stack</string>
    <string name="q_19_option_c">Linked List</string>
    <string name="q_19_option_d">Hash Table</string>

    <string name="q_20">Which of the following is an example of a NoSQL database?</string>
    <string name="q_20_option_a">MySQL</string>
    <string name="q_20_option_b">PostgreSQL</string>
    <string name="q_20_option_c">MongoDB</string>
    <string name="q_20_option_d">SQLite</string>

</resources>